tests/ir/valid/generics.vit
space tests/ir/valid/generics

proc id<T>(value: T) -> T {
  give value;
}

proc main() -> int {
  give id<int>(3);
}
