tests/ir/invalid/bad_generic_arity.vit
space tests/ir/invalid/bad_generic_arity

proc id<T>(value: T) -> T { give value; }

proc main() -> int {
  give id<int, int>(1);
}
